# bex

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CMakeLists.txt  README.md  RELEASE.md  bex.conf  snapcraft.yaml
.github/workflows/: cmake-multi-platform.yml  release.yml  win-release.yml
bex/: config.cpp  config.h  constants.h  generate.cpp  generate.h  logger.h  main.cpp  process.cpp  process.h  run.cpp  run.h  version.h.in
test/: BexTests.cpp  CMakeLists.txt  CPPTests.cpp  logger.hpp  testFile.cpp  tests.cpp
test/files/: testFile1.cpp  testFile2.cpp  testFile3.py
test/files/cpp/: testFile1.cpp  testFile2.cpp
test/folders/cpp/testFolder1/: bex.conf  main.cpp
test/folders/cpp/testFolder1/test/: test.cpp
test/folders/cpp/testFolder1/utils/: copy.cpp  multiply.cpp
test/folders/cpp/testFolder2/: bex.conf  main.cpp
test/folders/cpp/testFolder2/utils/: copy.hpp
test/folders/cpp/testFolder3/: bex.conf
